[project]
name = "internal-communication-llm-twin"
version = "0.1.0"
description = ""
authors = [
    {name = "Bunchhour",email = "chuandtin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poethepoet (>=0.44.0,<0.45.0)"
]
